# fragmentstein

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: __init__.py  fragmentstein.py  fragmentstein.sh
tests/: __init__.py  test_fragmentstein.py
tests/data/: test_sample1.bed  test_sample1.tsv  test_sample1.tsv.bgz  test_sample2.bedpe
tests/data/resources/: test_ref.chrom.sizes  test_ref_hg38.bed  test_ref_hg38.fna  test_ref_hg38.fna.fai
tests/expected/: test_sample1.bam
